[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/confirm_dialog.gd" type="Script" id=1]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.878431 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 2 )

[node name="ConfirmDialog" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="ButtonCancel" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ButtonOK" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -48.0
margin_right = 192.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 13 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -576.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 14 )
text = "Message"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
[connection signal="pressed" from="ButtonOK" to="." method="_on_ButtonOK_pressed"]
